[workspace]
resolver = "2"
members = [
    "crates/oxstat-core",
    "crates/oxstat-io",
    "crates/oxstat-expr",
    "crates/oxstat-transform",
    "crates/oxstat-stats",
    "crates/oxstat-syntax",
    "crates/oxstat-output",
    "crates/oxstat-chart",
    "crates/oxstat-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxstat/oxstat"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
oxstat-core = { path = "crates/oxstat-core" }
oxstat-io = { path = "crates/oxstat-io" }
oxstat-expr = { path = "crates/oxstat-expr" }
oxstat-transform = { path = "crates/oxstat-transform" }
oxstat-stats = { path = "crates/oxstat-stats" }
oxstat-syntax = { path = "crates/oxstat-syntax" }
oxstat-output = { path = "crates/oxstat-output" }
oxstat-chart = { path = "crates/oxstat-chart" }

# Arrow / data
arrow = { version = "53", features = ["prettyprint"] }
parquet = "53"

# Numeric
nalgebra = "0.33"
faer = "0.19"

# Parsing
winnow = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.26"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
